--- a/package.json
+++ b/package.json
@@ -1,43 +1,44 @@
 {
-  "name": "sfhelper",
-  "version": "1.2.1",
-  "description": "",
-  "main": "Src/Config/ToolConfig.ts",
-  "scripts": {
-    "form": "tsc && node ./Dist/FormatHelper.js",
-    "loc": "tsc && node ./Dist/RunLocalizationRedirection.js",
-    "vers": "tsc && node ./Dist/RunVersionHelper.js",
-    "Header": "tsc && node ./Dist/Header.js",
-    "upgrade": "tsc && node ./Dist/RunGithubHeaderPatch.js",
-    "upgradevers": "tsc && node ./Dist/RunGithubHeaderPatch.js && node ./Dist/RunVersionHelper.js",
-    "locCopy": "tsc && node ./Dist/RunLocCopyHelper.js",
-    "packForMe": "tsc && node ./Dist/RunPackForMe.js",
-    "SFP": "tsc && node ./Dist/RunPackPatreonForMe.js SF+",
-    "MWave": "tsc && node ./Dist/RunPackPatreonForMe.js MWave",
-    "faxit": "tsc && node ./Dist/RunPackPatreonForMe.js faxit",
-    "RSS": "tsc && node ./Dist/RunPackPatreonForMe.js RSS",
-    "test": "tsc && node ./Dist/test.js"
-  },
-  "author": "Kyrium",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/node": "^18.11.9"
-  },
-  "dependencies": {
-    "@types/decompress": "^4.2.4",
-    "@types/fs-extra": "^9.0.13",
-    "@types/ini": "^1.3.31",
-    "compressing": "^1.6.3",
-    "decompress": "^4.2.1",
-    "fs-extra": "^10.1.0",
-    "graphql": "^16.6.0",
-    "graphql-request": "^5.0.0",
-    "ini": "^3.0.1",
-    "json-format": "^1.0.1",
-    "nodejs-file-downloader": "^4.10.2",
-    "path": "^0.12.7",
-    "ts": "^0.2.2",
-    "types": "^0.1.1",
-    "typescript": "^4.9.3"
-  }
+	"name": "sfhelper",
+	"version": "1.2.1",
+	"description": "",
+	"main": "Src/Config/ToolConfig.ts",
+	"scripts": {
+		"form": "tsc && node ./Dist/FormatHelper.js",
+		"loc": "tsc && node ./Dist/RunLocalizationRedirection.js",
+		"vers": "tsc && node ./Dist/RunVersionHelper.js",
+		"Header": "tsc && node ./Dist/Header.js",
+		"upgrade": "tsc && node ./Dist/RunGithubHeaderPatch.js",
+		"upgradevers": "tsc && node ./Dist/RunGithubHeaderPatch.js && node ./Dist/RunVersionHelper.js",
+		"locCopy": "tsc && node ./Dist/RunLocCopyHelper.js",
+		"packForMe": "tsc && node ./Dist/RunPackForMe.js",
+		"SFP": "tsc && node ./Dist/RunPackPatreonForMe.js SF+",
+		"MWave": "tsc && node ./Dist/RunPackPatreonForMe.js MWave",
+		"faxit": "tsc && node ./Dist/RunPackPatreonForMe.js faxit",
+		"RSS": "tsc && node ./Dist/RunPackPatreonForMe.js RSS",
+		"test": "tsc && node ./Dist/test.js"
+	},
+	"author": "Kyrium",
+	"license": "ISC",
+	"devDependencies": {
+		"@types/decompress": "^4.2.5",
+		"@types/fs-extra": "^11.0.2",
+		"@types/ini": "^1.3.31",
+		"@types/node": "^20.8.0",
+		"prettier": "^3.0.3",
+		"prettier-plugin-organize-imports": "^3.2.3",
+		"prettier-plugin-tailwindcss": "^0.5.4",
+		"tslib": "^2.6.2",
+		"typescript": "^5.1.6"
+	},
+	"dependencies": {
+		"compressing": "^1.10.0",
+		"decompress": "^4.2.1",
+		"fs-extra": "^11.1.1",
+		"graphql": "^16.8.1",
+		"graphql-request": "^6.1.0",
+		"ini": "^4.1.1",
+		"json-format": "^1.0.1",
+		"nodejs-file-downloader": "^4.12.1"
+	}
 }
