--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -11,5 +11,5 @@
 	"insertPragma": false,
 	"tabWidth": 4,
 	"printWidth": 150,
-	"plugins": ["prettier-plugin-organize-imports", "prettier-plugin-tailwindcss"]
+	"plugins": ["prettier-plugin-organize-imports"]
 }
