--- a/package.json
+++ b/package.json
@@ -3,43 +3,45 @@
 	"version": "1.0w .0",
 	"description": "",
 	"main": "Src/Config/ToolConfig.ts",
+	"type": "module",
 	"scripts": {
-		"form": "tsc && node ./Dist/FormatHelper.js",
-		"loc": "tsc && node ./Dist/RunLocalizationRedirection.js",
-		"vers": "tsc && node ./Dist/RunVersionHelper.js",
-		"Header": "tsc && node ./Dist/Header.js",
-		"upgrade": "tsc && node ./Dist/RunGithubHeaderPatch.js",
-		"upgradevers": "tsc && node ./Dist/RunGithubHeaderPatch.js && node ./Dist/RunVersionHelper.js",
-		"locCopy": "tsc && node ./Dist/RunLocCopyHelper.js",
-		"packForMe": "tsc && node ./Dist/RunPackForMe.js",
-		"SFP": "tsc && node ./Dist/RunPackPatreonForMe.js SF+",
-		"MWave": "tsc && node ./Dist/RunPackPatreonForMe.js MWave",
-		"faxit": "tsc && node ./Dist/RunPackPatreonForMe.js faxit",
-		"RSS": "tsc && node ./Dist/RunPackPatreonForMe.js RSS",
-		"p": "tsc && node ./Dist/RunPackPatreonForMe.js",
-		"test": "tsc && node ./Dist/test.js"
+		"form": "tsx ./Src/FormatHelper.ts",
+		"loc": "tsx ./Src/RunLocalizationRedirection.ts",
+		"vers": "tsx ./Src/RunVersionHelper.ts",
+		"Header": "tsx ./Src/Header.ts",
+		"upgrade": "tsx ./Src/RunGithubHeaderPatch.ts",
+		"upgradevers": "tsx ./Src/RunGithubHeaderPatch.ts && tsx ./Src/RunVersionHelper.ts",
+		"locCopy": "tsc && node ./Src/RunLocCopyHelper.ts",
+		"packForMe": "tsx ./Src/RunPackForMe.ts",
+		"SFP": "tsx --watch ./Src/RunPackForMe.ts SFP",
+		"MWave": "tsx ./Src/RunPackForMe.ts MWave",
+		"faxit": "tsx ./Src/RunPackForMe.ts faxit",
+		"RSS": "tsx ./Src/RunPackForMe.ts RSS",
+		"p": "tsx ./Src/RunPackForMe.ts",
+		"test": "tsx ./Src/test.ts"
 	},
 	"author": "Kyrium",
 	"license": "ISC",
 	"devDependencies": {
-		"@types/decompress": "^4.2.5",
-		"@types/fs-extra": "^11.0.2",
-		"@types/ini": "^1.3.31",
-		"@types/node": "^20.8.0",
-		"prettier": "^3.0.3",
-		"prettier-plugin-organize-imports": "^3.2.3",
-		"prettier-plugin-tailwindcss": "^0.5.4",
+		"@types/decompress": "^4.2.7",
+		"@types/fs-extra": "^11.0.4",
+		"@types/ini": "^4.1.0",
+		"@types/node": "^20.12.8",
+		"prettier": "^3.2.5",
+		"prettier-plugin-organize-imports": "^3.2.4",
+		"prettier-plugin-tailwindcss": "^0.5.14",
 		"tslib": "^2.6.2",
-		"typescript": "^5.1.6"
+		"typescript": "^5.4.5"
 	},
 	"dependencies": {
 		"compressing": "^1.10.0",
 		"decompress": "^4.2.1",
-		"fs-extra": "^11.1.1",
+		"fs-extra": "^11.2.0",
 		"graphql": "^16.8.1",
 		"graphql-request": "^6.1.0",
-		"ini": "^4.1.1",
+		"ini": "^4.1.2",
 		"json-format": "^1.0.1",
-		"nodejs-file-downloader": "^4.12.1"
+		"nodejs-file-downloader": "^4.12.1",
+		"tsx": "^4.8.2"
 	}
 }
