--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "Src/Config/ToolConfig.ts",
 	"type": "module",
 	"scripts": {
+		"api": "npx graphql-codegen --config codegen.ts",
 		"form": "tsx ./Src/FormatHelper.ts",
 		"loc": "tsx ./Src/RunLocalizationRedirection.ts",
 		"vers": "tsx ./Src/RunVersionHelper.ts",
@@ -18,30 +19,39 @@
 		"faxit": "tsx ./Src/RunPackForMe.ts faxit",
 		"RSS": "tsx ./Src/RunPackForMe.ts RSS",
 		"p": "tsx ./Src/RunPackForMe.ts",
-		"test": "tsx ./Src/test.ts"
+		"test": "tsx ./Src/test.ts",
+		"upload-mods": "tsx ./ficsit-cli/upload-mods.ts"
 	},
 	"author": "Kyrium",
 	"license": "ISC",
 	"devDependencies": {
+		"@0no-co/graphqlsp": "^1.12.16",
+		"@graphql-codegen/cli": "^5.0.5",
+		"@graphql-codegen/client-preset": "^4.8.0",
+		"@graphql-codegen/schema-ast": "^4.1.0",
+		"@graphql-typed-document-node/core": "^3.2.0",
 		"@types/decompress": "^4.2.7",
 		"@types/fs-extra": "^11.0.4",
-		"@types/ini": "^4.1.0",
+		"@types/ini": "^4.1.1",
 		"@types/node": "^20.12.8",
-		"prettier": "^3.2.5",
-		"prettier-plugin-organize-imports": "^3.2.4",
-		"prettier-plugin-tailwindcss": "^0.5.14",
-		"tslib": "^2.6.2",
-		"typescript": "^5.4.5"
+		"prettier": "^3.5.3",
+		"prettier-plugin-organize-imports": "^4.1.0",
+		"prettier-plugin-tailwindcss": "^0.6.11",
+		"tslib": "^2.8.1",
+		"typescript": "^5.8.3"
 	},
 	"dependencies": {
-		"compressing": "^1.10.0",
+		"@graphql-cli/codegen": "^3.0.4",
+		"compressing": "^1.10.1",
 		"decompress": "^4.2.1",
-		"fs-extra": "^11.2.0",
-		"graphql": "^16.8.1",
-		"graphql-request": "^6.1.0",
-		"ini": "^4.1.2",
+		"dotenv": "^16.5.0",
+		"fs-extra": "^11.3.0",
+		"graphql": "^16.10.0",
+		"graphql-request": "^7.1.2",
+		"ini": "^5.0.0",
 		"json-format": "^1.0.1",
-		"nodejs-file-downloader": "^4.12.1",
-		"tsx": "^4.8.2"
+		"nodejs-file-downloader": "^4.13.0",
+		"tsx": "^4.19.3",
+		"zx": "^8.5.2"
 	}
 }
